attempt to fix z index on ios #1

--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@
 	--blue-color: #a9d2ef;
 	--pink-color: #dfc488;
   max-width: 100vw;
-  overflow-x: hidden;
 }
 
 @media screen and (max-width: 400px) {
@@ -69,7 +68,7 @@ body {
 
 .shop {
 	position: relative;
-	z-index: 0;
+	z-index: 1;
 	min-height: 100vh;
 	padding-left: 2em;
 	padding-right: 2em;
@@ -252,7 +251,7 @@ body {
   bottom: 50%;
   padding-top:50%;
   font-size: 1.5em;
-  z-index: 1;
+  z-index: 2;
   margin-block-start: 0px;
   margin-block-end: 0px;
   -webkit-transform:translate3d(0,-100%,0);
